public/resource/css/style.css
/**
Custom Style Configuration
--------------------------

Customizing CSS using variables can greatly enhance maintainability and flexibility in your stylesheets. 
By defining variables at the root level (:root), you establish a centralized repository of values that 
can be easily adjusted throughout your project.

For instance:

:root {
    --sidebar-bg: lightgrey;
    --main-text-color: black;
    --accent-color: var(--sidebar-bg);
}

These variables can then be applied across your stylesheets, promoting consistency and making it simpler to 
update your design scheme in the future.
*/
@import url('fontsize.min.css');

body {
    --break-word: break-word;
    word-wrap: var(--break-word);
}

.page-security{
    --background-image: none;
    background-color: var(--bs-gray-200);
    align-items: center;
    display: flex;
    min-height: 100vh;
    justify-content: center;
    background-repeat: no-repeat;
    background-size: cover;
    background-blend-mode: overlay;
    background-image: var(--background-image);
}

.page-security .main-header .header-logo img {
    height: 80px;
}

.page-security .btn {
    --bs-btn-padding-x: 0.75rem;
    --bs-btn-padding-y: 0.375rem;
}

.page-security .btn.btn-lg {
    --bs-btn-padding-y: 0.5rem;
    --bs-btn-padding-x: 1rem;
}

.form-check {
    padding-left: initial;
}

.eau-flash {
    position: fixed;
    width: 100%;
    z-index: 1000;
}

.eau-security-wrapper .form-widget input[type=checkbox] {
    background-color: var(--bs-primary);
    height: 15px;
}

.eau-security-wrapper .input-group .btn {
    --input-addon-height: 36px;
    height: var(--input-addon-height);
}

.eau-security-wrapper .input-group .input-group-text {
    height: calc(var(--input-addon-height) + 2px);
}

.eau-security-wrapper .content {
    padding: 3rem;
}

.input-group > .input-group-prepend > .btn {
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
}

.input-group .input-group-append > .btn {
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
}

input[type="text"] ~ .btn[data-password-toggle] > i::before {
    content: "\f070";
}

.form-widget .form-check {
    display: flex;
}

.btn.btn-notification,
.btn.btn-notification:hover {
    --button-secondary-bg: transparent;
    --button-secondary-color: var(--bs-gray-600);
    --button-hover-color: var(--button-secondary-color);
    --bs-btn-active-bg: var(--button-secondary-bg);
    --bs-btn-active-color: var(--bs-secondary-color);
}

.dropdown.header-notification > .dropdown-menu {
    --notification-dropdown-width: 360px;
    max-width: calc(100vw - 32px);
    width: var(--notification-dropdown-width);
}

.notification-global {
    list-style: none;
}

.notification-global .notification-item-icon {
    --icon-dimension: 34px;
    width: var(--icon-dimension);
    height: var(--icon-dimension);
    border: 2px solid var(--bs-gray-400);
    flex: 0 0 auto;
    border-radius: 0.4rem;
    overflow: hidden;
    padding: 3px;
}

.notification-global .notification-item-icon img {
    width: 100%;
    height: 100%;
}

.notification-global .notification-item {
    --item-padding: 0.3rem;
    padding: var(--item-padding);
    border-radius: 0.3rem;
}

.notification-global .notification-item.unread {
    background-color: var(--bs-gray-200);
}

.notification-global .notification-item.deleted {
    opacity: 0.15;
    background: var(--bs-danger-bg-subtle);
}

.notification-global .notification-item.deleted .notification-control {
    display: none;
}

.notification-global .pre-content {
    padding: 0 0.5rem;
}

.notification-global .notification-item .notification-link {
    color: var(--bs-gray-600);
    font-weight: 500;
}

.content-top {
    background-color: var(--bs-white);
}

.bs5-toaster {
    opacity: .88;
}

[v-cloak] {
    display: none;
}

/* ----------- Tree Nodes -------------- */

.nodes-item {
    border: 1px solid var(--bs-gray-300); 
    padding: 1rem;
    background-color: var(--bs-gray-100); 
    border-radius: 0.4rem;
}

#tree-nodes {
    /* transform: scale(0.8); */
}

/* ---------- [ Genealogy Container Section ] --------- */

/* Reset some basic styles */
.tree-list ul, 
.tree-list li {
    margin: 0;
    padding: 0;
    list-style-type: none;
    font-family: Arial, sans-serif;
}

/* Main tree container */
.tree-list .tree-family {
    /* padding-left: 20px; */
    position: relative;
}

/* Tree items */
.tree-list .tree-item {
    margin: 0;
    /* padding: 10px 0; */
    position: relative;
    /* padding-left: 20px; */
}

/* Links within tree items */
.tree-list .tree-anchor {
    --anchor-color: #6d6f71;
    text-decoration: none;
    color: var(--anchor-color);
    font-weight: 500;
    padding: 7px;
    border-radius: 2px;
    transition: background 0.3s, color 0.3s;
    display: block;
    border: 1px dotted var(--bs-gray-500);
    margin: 7px auto;
    font-size: small;
}

.tree-list .tree-anchor:hover {
    background: #3498db;
    color: #fff;
}

/* Style for nested lists */
.tree-list .tree-family ul {
    margin-left: 10px;
    padding-left: 16px;
    border-left: 1px dashed #bdc3c7;
    position: relative;
    display: none;
}

.tree-list .tree-anchor.show ~ ul.tree-family {
    display: block;
}

.tree-list .tree-item:first-child::before {
    top: 50%;
}

.tree-list .tree-item:last-child::before {
    top: 50%;
}

.tree-list .tree-item:first-child:last-child::before {
    display: inline-block;
}

/* Icon before each anchor */
.tree-list .tree-item > .tree-anchor::before {
    font-family: 'FontAwesome';
    margin-right: 10px;
    transition: color 0.3s;
    content: "\f06c";
    color: var(--bs-warning);
}

.tree-list .tree-item.branch > .tree-anchor::before {
    content: "\2b"; /* Plus Icon */
    color: var(--bs-success);
}

.tree-list .tree-item.branch > .tree-anchor.show::before {
    content: "\f068"; /* Minus Icon */
    color: var(--bs-danger);
}

.tree-list .tree-item .tree-anchor:hover::before,
.tree-list .tree-item.branch .tree-anchor:hover::before {
    color: #fff;
}

/* ----------- /Tree Nodes ------------- */

/* ------------ TableBuilder -------------- */
.cell-column {
    text-transform: capitalize;
}
/* ------------ /TableBuilder ------------- */

@media (min-width: 992px) {
    .eau-security-wrapper {
        margin: auto;
        width: 100%;
    }

    .sidebar {
        --sidebar-z-index: 1045;
        position: fixed;
        left: 0;
        width: 100%;
        z-index: var(--sidebar-z-index);
    }

    .notification-global.notification-list .notification-item {
        --item-padding: 0.8rem;
    }

    .notification-global.notification-list .pre-content {
        padding: 0 1rem;
    }

    .content-top {
        position: sticky;
        top: 0;
        z-index: 1040;
    }
}

